fix(QTimeline): img icons have incorrect size #13754

--- a/ui/src/components/timeline/QTimeline.sass
+++ b/ui/src/components/timeline/QTimeline.sass
@@ -60,7 +60,8 @@
       line-height: 38px
       width: 100%
       color: #fff
-      > svg 
+      > svg,
+      > img
         width: 1em
         height: 1em
 
