fix(QTimeline): svg and img icons have incorrect size #13754

--- a/ui/src/components/timeline/QTimeline.sass
+++ b/ui/src/components/timeline/QTimeline.sass
@@ -60,6 +60,10 @@
       line-height: 38px
       width: 100%
       color: #fff
+      > svg,
+      > img
+        width: 1em
+        height: 1em
 
   &__dot-img
     position: absolute
