--- a/ui/src/components/timeline/QTimeline.styl
+++ b/ui/src/components/timeline/QTimeline.styl
@@ -60,6 +60,10 @@
       line-height: 38px
       width: 100%
       color: #fff
+      > svg,
+      > img
+        width: 1em
+        height: 1em
 
   &__dot-img
     position: absolute
