fix(QUploader): "washed-up" header bg color #12515

--- a/ui/src/components/uploader/QUploader.sass
+++ b/ui/src/components/uploader/QUploader.sass
@@ -22,7 +22,7 @@
     &::-webkit-file-upload-button
       cursor: pointer
 
-  &__header, &__file
+  &__file
     &:before
       content: ''
       border-top-left-radius: inherit
