--- a/ui/src/components/uploader/QUploader.styl
+++ b/ui/src/components/uploader/QUploader.styl
@@ -22,7 +22,7 @@
     &::-webkit-file-upload-button
       cursor: pointer
 
-  &__header, &__file
+  &__file
     &:before
       content: ''
       border-top-left-radius: inherit
