feat: square prop for q-btn

--- a/ui/src/components/btn/QBtn.sass
+++ b/ui/src/components/btn/QBtn.sass
@@ -94,6 +94,9 @@
     min-width: 3em
     min-height: 3em
 
+  &--square
+    border-radius: 0
+
   &--flat, &--outline, &--unelevated
     &:before
       box-shadow: none
