--- a/ui/src/components/btn-group/QBtnGroup.sass
+++ b/ui/src/components/btn-group/QBtnGroup.sass
@@ -56,6 +56,9 @@
   &--rounded
     border-radius: $button-rounded-border-radius
 
+  &--square
+    border-radius: 0
+
   &--flat, &--outline, &--unelevated
     box-shadow: none
 
