--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -20,5 +20,32 @@ $warning   : #F2C037
 
 $brand-primary : #00B4FF
 
+// Dark theme
+$dark-1: #000000
+$dark-2: #121212
+$dark-3: #2f2f2f
+$dark-4: #6c6c6c
+$dark-5: #a0a0a0
+$dark-6: #bdbdbd
+$dark-7: #e0e0e0
+$dark-8: #eeeeee
+$dark-9: #f5f5f5
+$dark-10: #fafafa
+
+$primary--dark   : #0d3a66
+$secondary--dark : #145c55
+$accent--dark    : #651773
+
+$dark--dark      : #2b2b2b
+$dark-page--dark : #1b191b
+
+$positive--dark  : #226b33
+$negative--dark  : #a10e20
+$info--dark     : #1b8094
+$warning--dark   : #a17d1b
+
+$body-text-color--dark: $dark-7
+$body-bg--dark: $dark-2
+
 $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family-avenir: Avenir, $font-family
