docs(ui): Set dark colors for theme prism

--- a/docs/src/css/prism-theme-dark.sass
+++ b/docs/src/css/prism-theme-dark.sass
@@ -2,8 +2,8 @@
   margin: 0
   position: relative
   font-size: 12px
-  color: $grey-9
-  background-color: #fdfdfd
+  color: $grey-1
+  background-color: #353535
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
   text-align: left
   white-space: pre
@@ -20,7 +20,7 @@
   border-radius: $generic-border-radius
 
   &__inner
-    background-color: $grey-2
+    background-color: $dark-1
     max-height: inherit
     height: inherit
     padding: 1em
