docs(DocApiEntry): Set dark mode

--- a/docs/src/components/DocApiEntry.sass
+++ b/docs/src/components/DocApiEntry.sass
@@ -36,3 +36,11 @@
     padding: 2px 4px
     border-radius: $generic-border-radius
     display: inline-block
+
+.body--dark
+  .api-row
+    &__value
+      color: #fff
+    &__example
+      background-color: #{$dark-3}
+      border: 1px solid #{$dark-4}
