--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -42,7 +42,7 @@ $dark-page--dark : #1b191b
 $positive--dark  : #226b33
 $negative--dark  : #a10e20
 $info--dark     : #1b8094
-$warning--dark   : #a17d1b
+$warning--dark   : #7e6216
 
 $body-text-color--dark: $dark-7
 $body-bg--dark: $dark-2
