docs(AppMenu): Set dark mode

--- a/docs/src/components/AppMenu.sass
+++ b/docs/src/components/AppMenu.sass
@@ -24,3 +24,9 @@
 
   .q-item.q-router-link--active
     background: scale-color($brand-primary, $lightness: 90%)
+
+  // Dark mode
+.body--dark
+  .q-item.q-router-link--active
+    color: scale-color($brand-primary, $lightness: 50%)
+    background: scale-color($brand-primary, $lightness: -80%)
