docs(ui): Set primary color value

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -32,7 +32,7 @@ $dark-8: #eeeeee
 $dark-9: #f5f5f5
 $dark-10: #fafafa
 
-$primary--dark   : #0d3a66
+$primary--dark   : #3b84cb
 $secondary--dark : #145c55
 $accent--dark    : #651773
 
