docs(ui): Set brand-primary-brand color value

--- a/docs/src/css/app-dark.sass
+++ b/docs/src/css/app-dark.sass
@@ -1,9 +1,9 @@
 @import './prism-theme-dark.sass'
 
 .text-brand-primary
-  color: $brand-primary !important
+  color: $brand-primary--dark !important
 .bg-brand-primary
-  background-color: $brand-primary !important
+  background-color: $brand-primary--dark !important
 
 .body--dark
   --q-primary: #{$primary--dark}
