--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -33,6 +33,7 @@ $dark-9: #f5f5f5
 $dark-10: #fafafa
 
 $primary--dark   : #3b84cb
+$brand-primary--dark : #2468ac
 $secondary--dark : #145c55
 $accent--dark    : #651773
 
