feat(docs): small tweak to API cards

--- a/docs/src/components/DocApiEntry.sass
+++ b/docs/src/components/DocApiEntry.sass
@@ -36,3 +36,7 @@
     padding: 2px 4px
     border-radius: $generic-border-radius
     display: inline-block
+
+  &__pill
+    font-size: 1em
+    line-height: 1.2em
