refactor+feat+fix+perf(QBtn/QBtnDropdown/QBtnGroup/QPagination): (backport from Qv2) "square" prop; fix button design props; new props (gutter & active-design); enhance runtime speed #13912; #14577

--- a/ui/src/components/btn-group/QBtnGroup.sass
+++ b/ui/src/components/btn-group/QBtnGroup.sass
@@ -57,6 +57,9 @@
   &--rounded
     border-radius: $button-rounded-border-radius
 
+  &--square
+    border-radius: 0
+
   &--flat, &--outline, &--unelevated
     box-shadow: none
 
