--- a/ui/src/components/btn-group/QBtnGroup.styl
+++ b/ui/src/components/btn-group/QBtnGroup.styl
@@ -57,6 +57,9 @@
   &--rounded
     border-radius: $button-rounded-border-radius
 
+  &--square
+    border-radius: 0
+
   &--flat, &--outline, &--unelevated
     box-shadow: none
 
