fix(QPagination): various issues from previous PR

--- a/ui/src/components/pagination/QPagination.sass
+++ b/ui/src/components/pagination/QPagination.sass
@@ -9,14 +9,11 @@
     margin: 0
 
   &__content
-    --q-pagination-gutter-parent: -2px
-    --q-pagination-gutter-child: 2px
-
-    margin-top: var(--q-pagination-gutter-parent)
-    margin-left: var(--q-pagination-gutter-parent)
+    margin-top: -2px
+    margin-left: -2px
 
   &__content > .q-btn,
   &__content > .q-input,
   &__middle > .q-btn
-    margin-top: var(--q-pagination-gutter-child)
-    margin-left: var(--q-pagination-gutter-child)
+    margin-top: 2px
+    margin-left: 2px
