--- a/ui/src/components/select/QSelect.styl
+++ b/ui/src/components/select/QSelect.styl
@@ -17,8 +17,8 @@
   &__autocomplete-input
     position: absolute
     outline: 0 !important
-    width: 0
-    height: 0
+    width: 1px // Safari scrolls on top if 0
+    height: 1px // Safari scrolls on top if 0
     padding: 0
     border: 0
     opacity: 0
