--- a/ui/src/components/toolbar/QToolbar.sass
+++ b/ui/src/components/toolbar/QToolbar.sass
@@ -11,7 +11,7 @@
     font-size: 38px
 
 .q-toolbar__title
-  flex: 1 1 0%
+  flex: 1 1 0
   min-width: 1px
   max-width: 100%
   font-size: $toolbar-title-font-size
