chore: remove redundant measure unit

--- a/ui/src/css/core/flex.sass
+++ b/ui/src/css/core/flex.sass
@@ -15,7 +15,7 @@
           min-height: 0
           max-height: 100%
       &
-        flex: 10000 1 0%
+        flex: 10000 1 0
       &-auto
         flex: 0 0 auto
       &-grow
