--- a/ui/src/components/linear-progress/QLinearProgress.styl
+++ b/ui/src/components/linear-progress/QLinearProgress.styl
@@ -52,9 +52,11 @@
       background: rgba(255,255,255,.6)
 
   &__stripe
-    transition: width .3s
     background-image: linear-gradient(45deg, rgba(255,255,255,.15) 25%, rgba(255,255,255,0) 25%, rgba(255,255,255,0) 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, rgba(255,255,255,0) 75%, rgba(255,255,255,0)) !important
     background-size: 40px 40px !important
+
+    &--with-transition
+      transition: width .3s
 
 @keyframes q-linear-progress--indeterminate
   0%
