--- a/ui/src/components/color/QColor.sass
+++ b/ui/src/components/color/QColor.sass
@@ -171,6 +171,7 @@
     background: inherit
 
   &--dark
+    box-shadow: $dark-shadow-2
 
     .q-color-picker__tune-tab input
       border: 1px solid rgba(#fff, .3)
