--- a/ui/src/components/stepper/QStepper.sass
+++ b/ui/src/components/stepper/QStepper.sass
@@ -32,6 +32,8 @@
     flex-direction: row
 
   &--dark
+    box-shadow: $dark-shadow-2
+
     .q-stepper__dot span
       color: #000
 
@@ -117,6 +119,9 @@
 
   &__nav
     padding-top: 24px
+
+  &--flat
+    box-shadow: none
 
   &--bordered
     border: 1px solid $separator-color
