--- a/ui/src/components/uploader/QUploader.sass
+++ b/ui/src/components/uploader/QUploader.sass
@@ -125,6 +125,7 @@
 
   &--dark
     border-color: $separator-dark-color
+    box-shadow: $dark-shadow-2
 
     .q-uploader__file
       border-color: $separator-dark-color
