--- a/ui/src/components/toggle/QToggle.sass
+++ b/ui/src/components/toggle/QToggle.sass
@@ -74,8 +74,11 @@ $toggle-transition: .22s cubic-bezier(.4,0,.2,1)
       color: #fff
       &--truthy
         color: var(--q-primary)
-    .q-toggle__thumb:before
-      opacity: .32 !important
+    .q-toggle__thumb
+      &:after
+        box-shadow: none
+      &:before
+        opacity: .32 !important
 
   &--dense
 
@@ -129,4 +132,3 @@ body.desktop
     &:hover
       .q-toggle__thumb:before
         transform: scale3d(1.5, 1.5, 1)
-
