--- a/ui/src/css/core/elevation.sass
+++ b/ui/src/css/core/elevation.sass
@@ -7,12 +7,25 @@
   .shadow-up-#{$z}
     box-shadow: nth($shadows-up, $z)
 
+.inset-shadow
+  box-shadow: $inset-shadow
+.inset-shadow-down
+  box-shadow: $inset-shadow-down
+
+body.body--dark
+  @for $z from 1 through 24
+    .shadow-#{$z}
+      box-shadow: nth($dark-shadows, $z)
+    .shadow-up-#{$z}
+      box-shadow: nth($dark-shadows-up, $z)
+
+  .inset-shadow
+    box-shadow: $inset-dark-shadow
+  .inset-shadow-down
+    box-shadow: $inset-dark-shadow-down
+
 .no-shadow, .shadow-0
   box-shadow: none !important
-.inset-shadow
-  box-shadow: $inset-shadow !important
-.inset-shadow-down
-  box-shadow: $inset-shadow-down !important
 
 .z-marginals
   z-index: $z-marginals
