feat(docs): more design tweaks

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -219,7 +219,7 @@ body.q-scroll--lock .q-page
     font-size: 24px
     font-weight: 700
     letter-spacing: 6.75px
-    margin: 36px 0
+    margin: 12px 0 36px 0
 
     @media screen and (min-width: $breakpoint-sm-min)
       font-size: 36px
